--- a/webapp/templates/includes/ph_present.html
+++ b/webapp/templates/includes/ph_present.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Sensor Result Table</title>
+<title>PH data</title>
 
 {% endblock %}
 
 {% block body %}
+
 <style>
     table{
         font-family: 'Times New Roman', Times, serif;
@@ -25,6 +26,7 @@
     padding: 8px;
     }
 </style>
+
 <div class="result">
     <p></p>
     <img src="static/image/vgu.jpg" alt="VGU" style="margin: 20px">
@@ -34,5 +36,6 @@
         <h3>Details Value</h3>
     <p></p>
         {% include 'includes/graph.html' %}
-</div> 
+</div>
+
 {% endblock %}
